force-app/main/default/objects/User/fields/has_house_Account_Access__c.field-meta.xml
<CustomField>
    <fullName>has_house_Account_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has house Account Access</label>
    <type>Checkbox</type>
</CustomField>