force-app/main/default/objects/User/fields/Is_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manager?</label>
    <type>Checkbox</type>
</CustomField>