force-app/main/default/objects/User/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <label>Office Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saint Louis</fullName>
            </value>
            <value>
                <fullName>Oklahoma</fullName>
            </value>
            <value>
                <fullName>Kansas City</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Midwest Industrial Builders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>